--- a/pom.xml
+++ b/pom.xml
@@ -18,15 +18,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
-    </parent>
-
-    <groupId>com.github.ptgoetz</groupId>
+    <groupId>com.github.sheetal</groupId>
     <artifactId>storm-hdfs</artifactId>
-    <version>0.1.3-SNAPSHOT</version>
+    <version>0.1.4-SNAPSHOT</version>
 
     <licenses>
         <license>
@@ -34,20 +28,9 @@
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
-    <scm>
-        <connection>scm:git:git@github.com:ptgoetz/storm-hdfs.git</connection>
-        <developerConnection>scm:git:git@github.com:ptgoetz/storm-hdfs.git</developerConnection>
-        <url>:git@github.com:ptgoetz/storm-hdfs.git</url>
-    </scm>
+   
 
-    <developers>
-        <developer>
-            <id>ptgoetz</id>
-            <name>P. Taylor Goetz</name>
-            <email>ptgoetz@gmail.com</email>
-        </developer>
-    </developers>
-
+   
     <dependencies>
         <dependency>
             <groupId>org.apache.storm</groupId>
