maven repo publish

--- a/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,5 +1,5 @@
 eclipse.preferences.version=1
 extraProperties=
-projectKey=com.github.sheetal\:storm-hdfs
+projectKey=com.github.sheetaldolas\:storm-hdfs
 serverUrl=http\://localhost\:9000
 version=2
